--- a/public/css/festivalCard.css
+++ b/public/css/festivalCard.css
@@ -56,6 +56,7 @@
     height: 250px;
     background-size: cover;
     background-position-y: 40%;
+    background-size: cover;
 }
 
 .md-headline {
