--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -1,7 +1,7 @@
 <div class="festival-container" style="margin-top:{{topMargin}}px; margin-bottom:{{bottomMargin}}px; width:{{containerWidth}};height:{{containerHeight}}; flex-flow:{{containerFlexFlow}}">
     <div class="festival-card-container" style="height:{{festivalDisplayHeight}}; width:{{festivalCardWidth}}">
         <md-card class="festival-card">
-            <div class="festival-card-image md-card-image" style="background: linear-gradient(to top, rgba(0,0,0,0.55) 0%,rgba(0,0,0,0) 25%), url('{{event.largeimageurl}}'); background-size: cover;"
+            <div class="festival-card-image md-card-image" ng-style="{ 'background-image': 'linear-gradient(to top, rgba(0,0,0,0.55) 0%,rgba(0,0,0,0) 25%), url(' + event.largeimageurl + ')'}"
             ng-click="selectEventTile(event.tileInfo)">
                 <div class='festival-card-image-text'>
                     <md-card-title-text>
