move chip search to own service

--- a/views/index.html
+++ b/views/index.html
@@ -49,5 +49,6 @@
 	<script type="text/javascript" src="app/services/FestivalDataService.js"></script>
 	<script type="text/javascript" src="app/services/NetworkService.js"></script>
     <script type="text/javascript" src="app/services/SpotifyService.js"></script>
+    <script type="text/javascript" src="app/services/SearchService.js"></script>
 	<script type="text/javascript" src="app/directives/festvialTileDirective.js"></script>
 </html>
