--- a/public/templates/bodyTemplate.html
+++ b/public/templates/bodyTemplate.html
@@ -1,4 +1,4 @@
-<div id="main-container" ng-controller="FestivalListCtrl">
+<div id="main-container">
 
     <!-- header -->
     <ng-include src="'/app/views/header/header.html'"></ng-include>
