--- a/public/app/views/festivalList/festivalList.html
+++ b/public/app/views/festivalList/festivalList.html
@@ -1,4 +1,4 @@
-<div id="content-container" class="container">
+<div id="content-container" class="container" ng-controller="FestivalListCtrl">
     <!-- MAP CONTAINER -->
     <!--<div class="col-md-2" id="map-container">-->
     <!-- <canvas id="canvas" width="596" height="750" ></canvas>	 -->
