--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,51 @@
+#top-header {
+    width: 100%;
+    background-color: #446CB3;
+    position: fixed;
+    top: 0px;
+    left: 0px; 
+    z-index: 100;
+    color: white;
+    box-shadow: 0px 5px 5px rgba(51, 51, 51, 0.4);
+    /*display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: space-between; 
+    align-items: center; 
+    transition: top 0.2s ease-in-out;*/
+}
+
+.nav-up {
+    margin-top: 0px;
+}
+
+.nav-down {
+    margin-top: 60px;
+}
+
+#main-header-bar {
+    background-color: #446CB3;
+    position: fixed;
+    top: 0px;
+    left: 0px; 
+    padding: 10px 40px 0px 40px;   
+    width: 100%;  
+    z-index: 100;
+    display: flex;
+    flex-flow: row;   
+    flex-wrap: wrap;
+    justify-content: space-between; /* align horizontal */
+    align-items: center; /* align vertical */
+}
+
+#tabs-header-bar{
+    /*margin-top: 60px;*/
+    z-index: 99;
+
+    width: 100%;
+    transition: all 0.2s ease-in-out;
+}
+
 #search-box {
     background-color: #4183D7;
     color: white;
@@ -131,23 +179,6 @@ md-chips.md-default-theme .md-chips{
 .form-control{
     padding: 6px 30px;
     box-shadow: none;
-}
-
-#top-header {
-    width: 100%;
-    background-color: #446CB3;
-    position: fixed;
-    top: 0px;
-    left: 0px; 
-    z-index: 100; 
-    padding: 10px 40px 0px 40px;    
-    color: white;
-    box-shadow: 0px 5px 5px rgba(51, 51, 51, 0.4);
-    display: flex;
-    flex-flow: row;
-    flex-wrap: wrap;
-    justify-content: space-between; /* align horizontal */
-    align-items: center; /* align vertical */
 }
 
 @media (max-width:600px) {
