--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -8,7 +8,7 @@
                         <span class="md-headline" ng-hide="isExpanded || showMouseOver">{{ ::displayEventName}}</span>
                         <span class="md-headline" ng-show="isExpanded || showMouseOver">{{ ::event.eventname}}</span>
                     </md-card-title-text>
-                    <div>
+                    <div ng-if="event.spotifyArtists.length">
                         {{ ::event.spotifyArtists.length}}
                         <md-button class="md-icon-button" aria-label="Favorite">
                             <md-icon md-svg-icon="images/heart_white.svg"></md-icon>
