add ticket icon

--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -27,7 +27,7 @@
                     <p class="text">{{ ::event.date}}</p>
                 </div>
                 <div class="info-line">
-                    <md-icon class="icon" md-svg-src="images/event_gray.svg" aria-label="android "></md-icon>
+                    <md-icon class="icon" md-svg-src="images/ticket_gray.svg" aria-label="android "></md-icon>
                     <p class="text">{{ ::event.entryprice}}</p>
                 </div>
             </div>
