format dates nicely

--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="info-line">
                     <md-icon class="icon" md-svg-src="images/event_gray.svg" aria-label="android "></md-icon>
-                    <p class="text">{{ ::event.date}}</p>
+                    <p class="text">{{ ::event.formattedDate}}</p>
                 </div>
                 <div class="info-line">
                     <md-icon class="icon" md-svg-src="images/ticket_gray.svg" aria-label="android "></md-icon>
