--- a/views/index.html
+++ b/views/index.html
@@ -50,5 +50,7 @@
 	<script type="text/javascript" src="app/services/NetworkService.js"></script>
     <script type="text/javascript" src="app/services/SpotifyService.js"></script>
     <script type="text/javascript" src="app/services/SearchService.js"></script>
+        <script type="text/javascript" src="app/services/DateFormatService.js"></script>
+
 	<script type="text/javascript" src="app/directives/festvialTileDirective.js"></script>
 </html>
