add skiddle tickets link

--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -30,7 +30,7 @@
                 </div>
                 <md-card-actions layout="row" layout-align="end center">
                     <md-button>Favourite</md-button>
-                    <md-button class="md-primary">Visit Site</md-button>
+                    <md-button href="{{::event.link}}" target="_blank" class="md-primary">Buy Tickets</md-button>
                 </md-card-actions>
             </div>
         </md-card>
