--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -22,10 +22,10 @@
             </md-chips>
         </div>
 
-        <div id="header-user-login-container" ng-hide="spotifyCodeExists">
+        <div id="header-user-login-container" ng-hide="spotifyLoggedIn">
             <md-button class="md-raised" ng-click="showSignupDialog($event)">Register</md-button>
         </div>
-        <div id="header-spotify-authed-container" ng-show="spotifyDetailsRetrieved">
+        <div id="header-spotify-authed-container" ng-show="spotifyLoggedIn">
             <p id="header-spotify-authed-name">{{spotifyUserInfo.short_name}}</p>
             <div id="header-spotify-user-profile">
                 <div id="header-spotify-user-profile-circle" ng-style="{ 'background-image' : 'url(' + spotifyUserInfo.images[0].url + ')' }">
