--- a/views/index.html
+++ b/views/index.html
@@ -46,6 +46,7 @@
     <script type="text/javascript" src="app/views/mainController.js"></script>
 	<script type="text/javascript" src="app/views/festivalList/festivalList.js"></script>
     <script type="text/javascript" src="app/views/header/header.js"></script>
+    <script type="text/javascript" src="app/views/eventDetail/eventDetail.js"></script>
 	<script type="text/javascript" src="app/services/FestivalDataService.js"></script>
 	<script type="text/javascript" src="app/services/NetworkService.js"></script>
     <script type="text/javascript" src="app/services/SpotifyService.js"></script>
