Add date circle

--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -2,11 +2,15 @@
     <div id="event-image">
     </div>
     <div id="event-details-container">
-        <div id="event-header-container">
+        <div id="event-header-container" class="panel">
+            <div id="event-date-circle">
+                <p>14th Jun</p>
+            </div>
             <span class="md-headline">Creamfields 2016</span>
+            <p>One of the world's biggest, most audacious music festivals returns to Daresbury, Warrington for another scorching edition. </p>
         </div>
 
-        <div id="event-info-container">
+        <div id="event-info-container" class="panel">
             EVENT NAME hello i am an event
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore incidunt suscipit similique, dolor corrupti cumque qui consectetur
