--- a/public/css/EventDetail.css
+++ b/public/css/EventDetail.css
@@ -19,8 +19,8 @@
     position:relative;
     width: 100%;
     height: 100%;
-    margin-top: 350px;
-    z-index: 1000;
+    margin-top: 50vh;
+    z-index: 100;
     padding: 0px 100px 0px 100px;
     background-color: rgba(0,0,0,0);
     display: flex;
@@ -44,7 +44,7 @@
 }
 
 #event-date-circle{
-    background: red;
+    background: #DB0A5B;
     height: 80px;
     width: 80px;
     position: absolute;
