--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -1,8 +1,8 @@
-<div id="main-container" ng-controller="FestivalListCtrl">
+<div id="main-container">
 
     <ng-include src="'/app/views/header/header.html'"></ng-include>
 
-    <div id="event-container">
+    <div id="event-container" ng-controller="EventDetailCtrl">
         <div id="event-image">
         </div>
         <div id="event-details-container">
@@ -11,16 +11,56 @@
                     <p>14th Jun</p>
                 </div>
                 <span class="md-headline">Creamfields 2016</span>
-                <p>One of the world's biggest, most audacious music festivals returns to Daresbury, Warrington for another scorching
-                    edition. </p>
+                <p>
+                    One of the world's biggest, most audacious music festivals returns to Daresbury, Warrington for another scorching edition.
+                </p>
+                <span class="divider"></span>
+                <div id="event-header-info-bar">
+                    <div class="info-box">
+                        <md-icon md-svg-src="/images/heart_gray.svg" aria-label="Hearts">
+                        </md-icon>
+                        12 Artists
+                    </div>
+                    <div class="info-box">
+                        <md-icon md-svg-src="/images/place_gray.svg" aria-label="Hearts">
+                        </md-icon>
+                        Daresbury, Warrington, BS7 2YT
+                    </div>
+                    <div class="info-box">
+                        <md-icon md-svg-src="/images/ticket_gray.svg" aria-label="Hearts">
+                        </md-icon>
+                        Weekend from £129
+                    </div>
+                </div>
+                <div id="event-header-actions">
+                    <md-button>Favourite</md-button>
+                    <md-button href="{{::event.link}}" target="_blank" class="md-primary">
+                        Buy Tickets
+                    </md-button>
+                </div>
             </div>
 
             <div id="event-info-container" class="panel">
-                EVENT NAME hello i am an event
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore incidunt suscipit similique, dolor corrupti cumque qui consectetur
-                    autem laborum fuga quas ipsam doloribus sequi...
-                </p>
+                <span class="md-headline"  style="width:140px">Your Artists</span>
+
+                <md-grid-list md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter="8px"
+                md-gutter-gt-sm="4px">
+                    <md-grid-tile class="tile" ng-repeat="tile in tiles" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
+                        <md-icon md-svg-icon=""></md-icon>
+                        <md-grid-tile-footer>
+                            <h3>{{tile.name}}</h3></md-grid-tile-footer>
+                    </md-grid-tile>
+                </md-grid-list>
+
+                <span class="md-headline"  style="width:140px">Other Artists</span>
+                <md-grid-list md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter="8px"
+                md-gutter-gt-sm="4px">
+                    <md-grid-tile class="tile" ng-repeat="tile in moreTiles" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
+                        <md-icon md-svg-icon=""></md-icon>
+                        <md-grid-tile-footer>
+                            <h3>{{tile.name}}</h3></md-grid-tile-footer>
+                    </md-grid-tile>
+                </md-grid-list>
             </div>
 
         </div>
