--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -7,8 +7,11 @@
         </div>
         <div id="event-details-container">
             <div id="event-header-container" class="panel">
-                <div id="event-date-circle">
-                    <p>14th Jun</p>
+                <div id="event-like-circle">
+                    <md-icon ng-if="!eventLiked" md-svg-src="/images/fav_white_border.svg" aria-label="Date" style="width: 48px;height: 48px;">
+                    </md-icon>
+                    <md-icon ng-if="eventLiked" md-svg-src="/images/fav_white.svg" aria-label="Date" style="width: 48px;height: 48px;">
+                    </md-icon>
                 </div>
                 <span class="md-headline">Creamfields 2016</span>
                 <p>
@@ -17,17 +20,17 @@
                 <span class="divider"></span>
                 <div id="event-header-info-bar">
                     <div class="info-box">
-                        <md-icon md-svg-src="/images/heart_gray.svg" aria-label="Hearts">
+                        <md-icon md-svg-src="/images/event_gray.svg" aria-label="Date">
                         </md-icon>
-                        12 Artists
+                        14th June 2016
                     </div>
                     <div class="info-box">
-                        <md-icon md-svg-src="/images/place_gray.svg" aria-label="Hearts">
+                        <md-icon md-svg-src="/images/place_gray.svg" aria-label="Place">
                         </md-icon>
                         Daresbury, Warrington, BS7 2YT
                     </div>
                     <div class="info-box">
-                        <md-icon md-svg-src="/images/ticket_gray.svg" aria-label="Hearts">
+                        <md-icon md-svg-src="/images/ticket_gray.svg" aria-label="Price">
                         </md-icon>
                         Weekend from £129
                     </div>
@@ -40,22 +43,25 @@
                 </div>
             </div>
 
-            <div id="event-info-container" class="panel">
-                <span class="md-headline"  style="width:140px">Your Artists</span>
+            <!-- Container with artist information in it -->
+            <div class="event-info-container panel">
+                <span class="md-headline">Your Artists</span>
 
-                <md-grid-list md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter="8px"
-                md-gutter-gt-sm="4px">
+                <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
+                md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="tile" ng-repeat="tile in tiles" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
                         <md-icon md-svg-icon=""></md-icon>
                         <md-grid-tile-footer>
                             <h3>{{tile.name}}</h3></md-grid-tile-footer>
                     </md-grid-tile>
                 </md-grid-list>
-
-                <span class="md-headline"  style="width:140px">Other Artists</span>
-                <md-grid-list md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter="8px"
-                md-gutter-gt-sm="4px">
-                    <md-grid-tile class="tile" ng-repeat="tile in moreTiles" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
+            </div>
+            <div class="event-info-container panel">
+                <span class="md-headline">Other Artists</span>
+                <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
+                md-gutter="8px" md-gutter-gt-sm="4px">
+                    <md-grid-tile class="tile" ng-repeat="tile in moreTiles" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile"
+                    ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
                         <md-icon md-svg-icon=""></md-icon>
                         <md-grid-tile-footer>
                             <h3>{{tile.name}}</h3></md-grid-tile-footer>
