--- a/public/css/festivalCard.css
+++ b/public/css/festivalCard.css
@@ -96,7 +96,7 @@ md-card-actions{
     background-color: red;
 }
 
-.md-headline {
+.festival-card .md-headline {
     font-size: medium;
     /*color: white;*/
 }
