--- a/public/app/views/festivalList/festivalList.html
+++ b/public/app/views/festivalList/festivalList.html
@@ -12,7 +12,7 @@
     <!-- TILES CONTAINER -->
     <div id="info-container" ng-show="eventsLoaded">
         <div class="festival-card-list-container">
-            <festival-tile style="width:300px;" event="event" selected="tileSelected(tileID)" collapse="event.collapse" artist-list="userArtistList"
+            <festival-tile style="width:300px;" event="event" selected="tileSelected(event)" collapse="event.collapse" artist-list="userArtistList"
             ng-repeat="event in eventList | filter: displayEvent">
             </festival-tile>
         </div>
