--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -13,26 +13,26 @@
                     <md-icon ng-if="eventLiked"md-svg-src="/images/fav_white.svg" aria-label="Date" style="width: 48px;height: 48px;">
                     </md-icon>
                 </div>
-                <span class="md-headline">Creamfields 2016</span>
+                <span class="md-headline">{{event.eventname}}</span>
                 <p>
-                    One of the world's biggest, most audacious music festivals returns to Daresbury, Warrington for another scorching edition.
+                    {{event.description}}
                 </p>
                 <span class="divider"></span>
                 <div id="event-header-info-bar">
                     <div class="info-box">
                         <md-icon md-svg-src="/images/event_gray.svg" aria-label="Date">
                         </md-icon>
-                        14th June 2016
+                        {{event.date}}
                     </div>
                     <div class="info-box">
                         <md-icon md-svg-src="/images/place_gray.svg" aria-label="Place">
                         </md-icon>
-                        Daresbury, Warrington, BS7 2YT
+                        {{event.venue.name}} {{event.venue.address}}
                     </div>
                     <div class="info-box">
                         <md-icon md-svg-src="/images/ticket_gray.svg" aria-label="Price">
                         </md-icon>
-                        Weekend from £129
+                        {{event.entryprice}}
                     </div>
                 </div>
                 <div id="event-header-actions">
@@ -49,14 +49,14 @@
 
                 <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
                 md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile class="tile" ng-repeat="tile in tiles" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
+                    <md-grid-tile class="tile" ng-repeat="tile in event.artists" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
                         <md-icon md-svg-icon=""></md-icon>
                         <md-grid-tile-footer>
                             <h3>{{tile.name}}</h3></md-grid-tile-footer>
                     </md-grid-tile>
                 </md-grid-list>
             </div>
-            <div class="event-info-container panel">
+            <!--<div class="event-info-container panel">
                 <span class="md-headline">Other Artists</span>
                 <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
                 md-gutter="8px" md-gutter-gt-sm="4px">
@@ -67,7 +67,7 @@
                             <h3>{{tile.name}}</h3></md-grid-tile-footer>
                     </md-grid-tile>
                 </md-grid-list>
-            </div>
+            </div>-->
 
         </div>
     </div>
