--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -49,25 +49,25 @@
 
                 <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
                 md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile class="tile" ng-repeat="tile in event.artists" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
+                    <md-grid-tile class="tile" ng-repeat="tile in userArtists" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile" ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
                         <md-icon md-svg-icon=""></md-icon>
                         <md-grid-tile-footer>
                             <h3>{{tile.name}}</h3></md-grid-tile-footer>
                     </md-grid-tile>
                 </md-grid-list>
             </div>
-            <!--<div class="event-info-container panel">
+            <div class="event-info-container panel">
                 <span class="md-headline">Other Artists</span>
                 <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
                 md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile class="tile" ng-repeat="tile in moreTiles" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile"
+                    <md-grid-tile class="tile" ng-repeat="tile in otherArtists" md-rowspan="1" md-colspan="1" md-colspan-sm="1" ng-class="tile"
                     ng-style="{ 'background-image': 'url(' + tile.image + ')'}">
                         <md-icon md-svg-icon=""></md-icon>
                         <md-grid-tile-footer>
                             <h3>{{tile.name}}</h3></md-grid-tile-footer>
                     </md-grid-tile>
                 </md-grid-list>
-            </div>-->
+            </div>
 
         </div>
     </div>
