hide your artists if none appear

--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -44,7 +44,7 @@
             </div>
 
             <!-- Container with artist information in it -->
-            <div class="event-info-container panel">
+            <div class="event-info-container panel" ng-if="userArtist.length">
                 <span class="md-headline">Your Artists</span>
 
                 <md-grid-list class="artist-grid" md-cols="4" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4" md-row-height-gt-md="1:1" md-row-height="4:3"
