--- a/public/css/header.css
+++ b/public/css/header.css
@@ -9,6 +9,10 @@
     box-shadow: 0px 5px 5px rgba(51, 51, 51, 0.4);
 }
 
+.md-autocomplete-suggestions{
+    z-index: 10000;
+}
+
 .nav-up {
     margin-top: 0px;
 }
