take out event setup into festival data service

--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -2,7 +2,7 @@
 
     <ng-include src="'/app/views/header/header.html'"></ng-include>
 
-    <div id="event-container" ng-controller="EventDetailCtrl">
+    <div id="event-container">
         <div id="event-image">
         </div>
         <div id="event-details-container">
