--- a/public/templates/bodyTemplate.html
+++ b/public/templates/bodyTemplate.html
@@ -1,8 +1,8 @@
-<div id="main-container" ng-controller="FestivalListCtrl">
+<div id="main-container" >
 
     <!-- header -->
     <ng-include src="'/app/views/header/header.html'"></ng-include>
     <!-- Main festival list -->
-    <ng-include src="'/app/views/festivalList/festivalList.html'"></ng-include>
+    <ng-include src="'/app/views/festivalList/festivalList.html'" ng-controller="FestivalListCtrl"></ng-include>
 
 </div>
