make main controller set the template to show on the main page (currently festivalList)

--- a/public/app/views/festivalList/festivalList.html
+++ b/public/app/views/festivalList/festivalList.html
@@ -1,8 +1,4 @@
-<div id="content-container" class="container">
-    <!-- MAP CONTAINER -->
-    <!--<div class="col-md-2" id="map-container">-->
-    <!-- <canvas id="canvas" width="596" height="750" ></canvas>	 -->
-    <!--</div>-->
+<div id="content-container" class="container" ng-controller="FestivalListCtrl">
 
     <!-- Loading progress bar -->
     <div id="progress-container" ng-show="!eventsLoaded">
