--- a/public/templates/bodyTemplate.html
+++ b/public/templates/bodyTemplate.html
@@ -2,7 +2,8 @@
 
     <!-- header -->
     <ng-include src="'/app/views/header/header.html'"></ng-include>
+    
     <!-- Main festival list -->
-    <ng-include src="'/app/views/festivalList/festivalList.html'" ng-controller="FestivalListCtrl"></ng-include>
+    <ng-include src="currentTabTemplate"></ng-include>
 
 </div>
