show formatted date on event detail page

--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -22,7 +22,7 @@
                     <div class="info-box">
                         <md-icon md-svg-src="/images/event_gray.svg" aria-label="Date">
                         </md-icon>
-                        {{event.date}}
+                        {{formatDate(event.date)}}
                     </div>
                     <div class="info-box">
                         <md-icon md-svg-src="/images/place_gray.svg" aria-label="Place">
