--- a/public/app/views/eventDetail/eventDetail.html
+++ b/public/app/views/eventDetail/eventDetail.html
@@ -30,7 +30,7 @@
                         {{event.venue.name}} {{event.venue.address}}
                     </div>
                     <div class="info-box">
-                        <md-icon md-svg-src="/images/ticket_gray.svg" aria-label="Price">
+                        <md-icon md-svg-src="/images/cash.svg" aria-label="Price">
                         </md-icon>
                         {{event.entryprice}}
                     </div>
