--- a/public/app/views/favouritesList/favouritesList.html
+++ b/public/app/views/favouritesList/favouritesList.html
@@ -9,8 +9,31 @@
     <div id="info-container" ng-show="eventsLoaded">
         <div id="favourite-card-list-container">
             <div class="favourite-card" ng-repeat="event in favouriteEvents">
-                {{event.eventname}}
-                {{event.entryprice}}
+                <div class="festival-image" ng-style="{'background-image': 'url(' + event.largeimageurl +')'}">
+
+                </div>
+                <div class="details-container">
+                    <div class="header">
+                        {{event.eventname}}
+                    </div>
+                    <div class="event-details">
+                        <div class="info-box">
+                            <md-icon md-svg-src="/images/event_gray.svg" aria-label="Date">
+                            </md-icon>
+                            {{formatDate(event.date)}}
+                        </div>
+                        <div class="info-box">
+                            <md-icon md-svg-src="/images/place_gray.svg" aria-label="Place">
+                            </md-icon>
+                            {{event.venue.name}} {{event.venue.address}}
+                        </div>
+                        <div class="info-box">
+                            <md-icon md-svg-src="/images/cash.svg" aria-label="Price">
+                            </md-icon>
+                            {{event.entryprice}}
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
