Pull out header from festival list closes #104  🆒(#110)
* Move event tile location

* do one loop over artists lists when filtering

* shorten max name length on tiles

* save event list in festival data service

* take out event setup into festival data service

* make main controller set the template to show on the main page (currently festivalList)

* Tidy up

--- a/public/templates/bodyTemplate.html
+++ b/public/templates/bodyTemplate.html
@@ -1,8 +1,9 @@
-<div id="main-container" ng-controller="FestivalListCtrl">
+<div id="main-container" >
 
     <!-- header -->
     <ng-include src="'/app/views/header/header.html'"></ng-include>
+    
     <!-- Main festival list -->
-    <ng-include src="'/app/views/festivalList/festivalList.html'"></ng-include>
+    <ng-include src="currentTabTemplate"></ng-include>
 
 </div>
